diesel_compile_tests/tests/compile-fail/select_for_update_nowait_cannot_be_used_on_mysql.rs
#[macro_use]
extern crate diesel;

use diesel::*;
use diesel::mysql::MysqlConnection;

table! {
    users {
        id -> Integer,
    }
}

fn main() {
    let conn = MysqlConnection::establish("").unwrap();
    users::table
        .for_update()
        .no_wait()
        .load(&conn)
        //~^ ERROR: E0271
        .unwrap();
}
